--- a/app/assets/stylesheets/notebook_index.scss
+++ b/app/assets/stylesheets/notebook_index.scss
@@ -14,7 +14,7 @@
  font-weight: 300;
  color: black;
  transition: background 200ms, color 200ms;
- padding: 12px;
+ // padding: 12px;
  position: relative;
 }
 
