--- a/app/assets/stylesheets/notebooks.scss
+++ b/app/assets/stylesheets/notebooks.scss
@@ -67,9 +67,13 @@
  }
 
  .trash {
+  //  display: block;
    float: right;
-   position: absolute;
-   bottom: 29px;
-   right: 35px;
+  //  position: absolute;
+  //  bottom: 29px;
+  //  right: 35px;
    color: gainsboro;
+   display: inline-flex;
+   margin-top: 3px;
+   padding: 6px;
  }
