--- a/app/assets/stylesheets/notes.scss
+++ b/app/assets/stylesheets/notes.scss
@@ -9,9 +9,9 @@
    font-family: "Roboto", sans-serif;
    font-size: 18px;
    font-weight: 300;
-   color: #202020;
+   color: black;
    transition: background 200ms, color 200ms;
-   padding: 12px;
+  //  padding: 12px;
    position: relative;
  }
 
